# jsql

./: .gitignore  Cargo.toml  README.md  test.py
jsql/: .gitignore  Cargo.toml  pyproject.toml  test.py
jsql/src/: lib.rs  util.rs
myenv/: pyvenv.cfg
src/: lib.rs  util.rs
