[package]
name = "jsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jsql"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
minijinja = "1.0.10"
serde = "1.0.192"
serde_json = { version = "1.0.108", features = ["raw_value"] }
serde_yaml = "0.9.1"